keep working on eliminations table

--- a/README.html
+++ b/README.html
@@ -358,7 +358,7 @@ display: none;
 <p>Data on the <a href="https://www.bbc.co.uk/programmes/b03myqj2">Great
 British Sewing Bee</a></p>
 <p>Sourced from <a href="https://en.wikipedia.org/wiki/The_Great_British_Sewing_Bee">Wikipedia</a>.</p>
-<p>Inspiriation from the <a href="https://github.com/apreshill/bakeoff">bakeoff</a> package</p>
+<p>Inspiration from the <a href="https://github.com/apreshill/bakeoff">bakeoff</a> package</p>
 </div>
 
 
